Refactor Stream.toList() to Collectors.toList() for Java 11 compatibility